# savana-facturepro

./: .config  .flake8  .gitignore  .pre-commit-config.yaml  LISEZMOI-WINDOWS.md  Makefile  README.md  START.bat  STOP.bat  generate_report.py  menu.bat  pyproject.toml  saas.ps1  worklog.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-check.yml  release.yml
apps/facturepro/backend/: .env  .env.example  Dockerfile  entrypoint.sh  pytest.ini  requirements-test.txt  requirements.txt
apps/facturepro/backend/app/: celery_app.py  main.py  seeders.py
apps/facturepro/backend/tests/: __init__.py  conftest.py  test_api.py  test_comprehensive.py
apps/facturepro/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/facturepro/frontend/public/: manifest.json  offline.html  sw.js
apps/facturepro/frontend/src/: App.tsx  index.css  main.tsx
apps/savanaflow-mobile/: App.tsx  README.md  app.json  package.json  tsconfig.json
apps/savanaflow-mobile/src/i18n/: index.ts
apps/savanaflow-mobile/src/store/: auth.ts  cart.ts  network.ts
apps/savanaflow/backend/: .env  Dockerfile  alembic.ini  entrypoint.sh  requirements.txt  seed_db.py
apps/savanaflow/backend/app/: celery_app.py  main.py  seeders.py
apps/savanaflow/backend/migrations/: env.py
apps/savanaflow/backend/tests/: test_api.py
apps/savanaflow/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/savanaflow/frontend/public/: manifest.json  offline.html  sw.js
apps/savanaflow/frontend/src/: App.tsx  index.css  main.tsx
apps/schoolflow/backend/: .env.example  Dockerfile  requirements.txt
apps/schoolflow/backend/app/: celery_app.py  main.py
apps/schoolflow/backend/migrations/: env.py
apps/schoolflow/backend/tests/: test_api.py
apps/schoolflow/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/schoolflow/frontend/src/: App.tsx
docs/: README.md  api_documentation.md  architecture.md  demo_steps.md  postman_collection.json
docs/api/: authentication.md  rate-limits.md
docs/api/endpoints/: customers.md  invoices.md  webhooks.md
docs/api/sdks/: javascript.md  python.md
docs/getting-started/: concepts.md  introduction.md  quick-start.md
docs/guides/facturepro/: accounting.md  customers.md  invoicing.md  payments.md  reports.md
docs/guides/savanaflow/: ecommerce.md  inventory.md  loyalty.md  pos.md
docs/guides/schoolflow/: attendance.md  grades.md  parent-portal.md  students.md
download/: facturepro-demo.html  fix-docker-build.patch  fix-docker-build.sh  generate_audit_report.py  index.html  savanaflow-pos-demo.html  schoolflow-demo.html
infra/: configure-domains.sh  deploy.sh  diagnose.sh  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml  reset-database-fix.sh  setup-local.ps1  setup-local.sh  start-all.sh
infra/alertmanager/: alertmanager.yml
infra/grafana/provisioning/dashboards/: dashboards.yml  infrastructure.json  saas-overview.json
infra/grafana/provisioning/datasources/: datasources.yml
infra/nginx/: nginx.conf  nginx.dev.conf
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: alerts.yml
k8s/base/: ingress.yaml  kustomization.yaml  namespace.yaml
k8s/base/configmaps/: app-config.yaml  nginx-config.yaml
k8s/base/deployments/: celery-beat.yaml  celery-worker.yaml  facturepro-backend.yaml  facturepro-frontend.yaml  savanaflow-backend.yaml  savanaflow-frontend.yaml  schoolflow-backend.yaml  schoolflow-frontend.yaml
k8s/base/monitoring/: network-policies.yaml  pod-disruption-budgets.yaml  prometheus-rules.yaml  servicemonitor.yaml
k8s/base/secrets/: api-secrets.yaml  db-credentials.yaml  redis-credentials.yaml
k8s/base/services/: backend-services.yaml  frontend-services.yaml
k8s/base/statefulsets/: postgres.yaml  redis.yaml
k8s/helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  deployments.yaml  hpa.yaml  ingress.yaml  namespace.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/overlays/production/: kustomization.yaml
k8s/overlays/production/config/: production-config.yaml
k8s/overlays/production/hpa/: backend-hpa.yaml  frontend-hpa.yaml  worker-hpa.yaml
k8s/overlays/production/patches/: probes-patch.yaml  replica-patch.yaml  resource-patch.yaml
k8s/overlays/staging/: kustomization.yaml
k8s/overlays/staging/config/: staging-config.yaml
k8s/overlays/staging/patches/: replica-patch.yaml  resource-patch.yaml
k8s/scripts/: deploy.sh  monitor.sh  rollback.sh
mobile/: .env.example  App.tsx  app.json  babel.config.js  eas.json  package.json  tsconfig.json
mobile/src/: App.tsx
mobile/src/app/: _layout.tsx  appselector.tsx  index.tsx
mobile/src/app/(tabs)/: _layout.tsx  index.tsx  products.tsx  settings.tsx
mobile/src/db/: database.ts  schema.ts  sync.ts
mobile/src/hooks/: useApi.ts  useAuth.ts  useOffline.ts  useSync.ts
mobile/src/i18n/: en.json  fr.json  index.ts
mobile/src/lib/: api.ts  auth.ts  notifications.ts  storage.ts  sync.ts
mobile/src/native/: BarcodeScanner.ts  Biometrics.ts  BluetoothPrinter.ts  Notifications.ts  Printer.ts
mobile/src/store/: authStore.ts  offlineStore.ts
mobile/src/stores/: authStore.ts  cartStore.ts  syncStore.ts
mobile/src/utils/: constants.ts  formatters.ts  validators.ts
scripts/: docker-clean-restart.sh  fix-migration-state.sql  reset-database.sh  saas.sh
shared/config/: africa.config.ts
shared/libs/ai/: __init__.py  insights.py  invoice_ocr.py  predictions.py
shared/libs/auth/: jwt_utils.py
shared/libs/db/: base.py
shared/libs/models/: tenant.py
shared/libs/notifications/: __init__.py  base.py  email_channel.py  email_template_service.py  notification_service.py  push_firebase.py  sms_africas_talking.py  whatsapp.py
shared/libs/payments/: __init__.py  base.py  cinetpay.py  factory.py  mpesa.py  paystack.py
shared/libs/utils/: common.py
shared/models/: __init__.py  tenant.py
src/app/: page.tsx
(+413 files in other folders)
