[project]
name = "savana-africa-saas"
version = "1.0.0"
description = "Multi-tenant SaaS platform for African businesses - Invoice, POS, and School Management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Savana Africa", email = "contact@savana-africa.com" }
]
keywords = ["saas", "invoice", "pos", "school-management", "africa", "fastapi", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://savana-africa.com"
Documentation = "https://docs.savana-africa.com"
Repository = "https://github.com/savana-africa/savana-facturepro"
Issues = "https://github.com/savana-africa/savana-facturepro/issues"

# ─────────────────────────────────────────────────────────────────────────────
# Black Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | migrations
    | alembic
    | __pycache__
    | \.eggs
    | *.egg-info
)/
'''

# ─────────────────────────────────────────────────────────────────────────────
# isort Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "migrations",
    "alembic",
]
known_first_party = ["app", "shared"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "celery",
    "redis",
    "httpx",
    "pytest",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ─────────────────────────────────────────────────────────────────────────────
# Ruff Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "migrations",
    "alembic",
    "__pycache__",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by black)
    "B008",    # do not perform function calls in argument defaults (FastAPI Depends)
    "B904",    # raise without from inside except
    "ARG001",  # unused function argument (common in FastAPI)
    "ARG002",  # unused method argument
    "SIM108",  # use ternary operator
    "ERA001",  # commented out code
    "RUF012",  # mutable class attributes (Pydantic models)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["ARG", "S101", "F401", "F403"]
"migrations/*" = ["E501", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["app", "shared"]

# ─────────────────────────────────────────────────────────────────────────────
# MyPy Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "reportlab.*",
    "aiosmtplib.*",
    "passlib.*",
    "jose.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─────────────────────────────────────────────────────────────────────────────
# Pytest Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app", "shared"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/__init__.py",
    "*/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if settings.DEBUG:",
    "@abstractmethod",
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ─────────────────────────────────────────────────────────────────────────────
# Bandit Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    "alembic",
    "node_modules",
]
skips = [
    "B101",  # assert_used
    "B601",  # paramiko_calls
]

# ─────────────────────────────────────────────────────────────────────────────
# Pylint Configuration (optional, if using pylint)
# ─────────────────────────────────────────────────────────────────────────────
[tool.pylint.main]
ignore = ["migrations", "alembic", "tests", "node_modules"]
jobs = 0
limit-inference-results = 100
persistent = true
py-version = "3.11"

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long
    "E1101",  # no-member (pydantic issue)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "W0613",  # unused-argument
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "id", "db", "_", "pk"]

# ─────────────────────────────────────────────────────────────────────────────
# Semantic Release Configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "echo 'No build command configured'"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "test", "chore", "perf", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
